--- a/platzigram/templates/users/base.html
+++ b/platzigram/templates/users/base.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% block head_content %}
-    {% endblock %}
-
+    {% block head_content %}{% endblock %}
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -12,13 +10,18 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 
 </head>
-<body>
+<body class="h-100">
 
-    {% include "nav.html" %}
+    <div class="container h-100">
+        <div class="row h-100 justify-content-center align-items-center">
+            <div class="col-sm-12 col-md-5 col-lg-5 pt-2 pl-5 pr-5 pb-5" id="auth-container">
 
-    <div class="container mt-5">
-        {% block container %}
-        {% endblock%}
+                <img src="{% static "img/instagram.png" %}" class="img-fluid rounded mx-auto d-block pb-4" style="max-width: 60%;">
+
+                {% block container %}{% endblock%}
+
+            </div>
+        </div>
     </div>
 
 </body>
