--- a/platzigram/templates/users/login.html
+++ b/platzigram/templates/users/login.html
@@ -12,8 +12,14 @@
 
       <form action="{% url 'login' %}" method="POST">
           {% csrf_token %}
-          <input type="text" placeholder="Username" name="username">
-          <input type="text" placeholder="Password" name="password">
-          <button type="submit">Sign in</button>
+
+          <div class="form-group">
+            <input class="form-control" type="text" placeholder="Username" name="username">            
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="password" placeholder="Password" name="password">
+          </div>
+
+          <button class="btn btn-primary btn-block mt-5" type="submit">Sign in</button>
       </form>
     {% endblock container %}
