--- a/platzigram/templates/users/signup.html
+++ b/platzigram/templates/users/signup.html
@@ -14,29 +14,11 @@
     <form action=" {% url 'signup' %} " method="POST">
         {% csrf_token %}
 
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Username" name="username" required>
-        </div>
-
-        <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" name="passwd" required>
-        </div>
-
-        <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password confirmation" name="passwd_confirmation" required>
-        </div>
-
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="First name" name="first_name" required>
-        </div>
-
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Last name" name="last_name" required>
-        </div>
-
-        <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" name="email" required>
-        </div>
+       {% for elment in form %}
+         <div class="form-group">
+             {{elment}}
+         </div>
+       {% endfor %}
 
         <button class="btn btn-primary btn-block mt-5" type="submit">Register</button>
 
