manejando vistas con clases en lugar de funciones

--- a/platzigram/templates/users/login.html
+++ b/platzigram/templates/users/login.html
@@ -10,7 +10,7 @@
               </div>
         {% endif %}
 
-      <form action="{% url 'login' %}" method="POST">
+      <form action="{% url 'users:login' %}" method="POST">
           {% csrf_token %}
 
           <div class="form-group">
@@ -23,6 +23,6 @@
           <button class="btn btn-primary btn-block mt-3" type="submit">Sign in</button>
       </form>
 
-      <p class="mt-4">Don't have an account yet? <a href="{% url "signup" %}">Sign up here.</a></p>
+      <p class="mt-4">Don't have an account yet? <a href="{% url "users:signup" %}">Sign up here.</a></p>
 
     {% endblock container %}
