--- a/platzigram/templates/users/signup.html
+++ b/platzigram/templates/users/signup.html
@@ -11,7 +11,7 @@
         </div>
     {% endif %}
     
-    <form action=" {% url 'signup' %} " method="POST">
+    <form action=" {% url 'users:signup' %} " method="POST">
         {% csrf_token %}
 
        {% for elment in form %}
