--- a/platzigram/templates/posts/detail.html
+++ b/platzigram/templates/posts/detail.html
@@ -3,16 +3,13 @@
 {% block head_content %}
     <title>Platzigram</title>
 {% endblock%}
-
+<!DOCTYPE html>
 {% block container %}
+
     <div class="container">
         <div class="row">
-
-            {% for post in posts %}
             {% include "posts/post_card.html" %}
-            {% endfor %}
         </div>
     </div>
 
-    {% include "pagination.html" %}
 {% endblock %}
